<resources>
    <!--Название приложения-->
    <string name="app_name">AtlanTeam Test</string>

    <!--Названия вкладок-->
    <string name="name_tab_list_card">Список карточек</string>
    <string name="name_tab_contacts">Контакты</string>

    <!--Строки фрагмента контактов-->
    <string name="contact_number_phone">8(989)700–93–37</string>
    <string name="contact_mail">wdbondarenko@gmail.com</string>
    <string name="contact_name_author">Бондаренко Вячеслав Дмитриевич</string>
    <string name="contact_theme_message">Приглашение на собеседование</string>
    <string name="contact_text_message">Здравствуйте, Вячеслав</string>
    <string name="contact_text_input_message">Введите сообщение…</string>
    <string name="contact_scheme">mailto</string>
    <string name="contact_uri_string">tel:</string>

    <!--API-->
    <string name="api_request_executing">Выполняется запрос к API</string>
    <string name="api_request_success">Запрос был успешно выполнен</string>
    <string name="api_request_empty_string_response_body">Пустое тело ответа</string>
    <string name="api_request_incorrect_input_params">Некорректные параметры для выполнения запроса к API</string>
    <string name="api_request_not_success">Запрос не был выполнен</string>
    <string name="api_request_header_authorization" formatted="false">Token %s</string>

    <!--Строки для карточек-->
    <string name="title">Заголовок:</string>
    <string name="post">Пост:</string>
    <string name="comment">Комментарий:</string>
    <string name="input_id">введите id</string>
    <string name="apply">подтвердить</string>
    <string name="info_text">id должно лежать в диапазоне от 0 до </string>
    <string name="info_empty_string">Введите идентификатор</string>
    <string name="commentator">Комментарий пользователя</string>
    <string name="mail_commentator">Почта комментатора</string>
    <string name="state">Статус</string>
    <string name="completed">ВЫПОЛНЕНО</string>
    <string name="uncompleted">НЕ ВЫПОЛНЕНО</string>

    <!--Строки для элемента списка пользователей-->
    <string name="name">Имя:</string>
    <string name="login">Логин:</string>
    <string name="email">email:</string>
    <string name="street">Улица:</string>
    <string name="suite">Дом:</string>
    <string name="city">Город:</string>
    <string name="address">Адрес:</string>

</resources>
